tests/snapshots/binds__bind_set_query_to_itself@003.snap
---
source: tests/binds.rs
description: "input: items [\"a\", \"b\", \"c\"]\noptions: --bind ctrl-a:set-query({q})\nafter:\n  @char 'a'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> a                                                                             "
"  1/3                                                                        0/0"
"> a                                                                             "
cursor: (24, 4)
