tests/snapshots/binds__bind_start_select_all_sync@001.snap
---
source: tests/binds.rs
description: "input: items [\"a\", \"b\", \"c\"]\noptions: --multi --sync --bind start:select-all"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" >c                                                                             "
" >b                                                                             "
">>a                                                                             "
"  3/3 [3]                                                                    0/0"
">                                                                               "
cursor: (24, 3)
